# non-expansive-odes

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
non_expansive_odes/experiments/: bsds_dncnn.py  bsds_nonexpansive.py  cifar10_baseline.py  cifar10_nonexpansive.py
non_expansive_odes/models/: activation_functions.py  blocks.py  image_classifiers.py  image_denoisers.py  integrators.py  linear.py
non_expansive_odes/utils/: bsds_data.py  cifar10_data.py  classification.py  denoising.py  loggers.py  power_method.py  tv_denoising.py
tests/: test_linear_adjoints.py  test_linear_setup.py  test_ode_blocks.py  test_power_method.py
