[tool.poetry]
name = "non-expansive-odes"
version = "0.1.0"
description = ""
authors = ["Ferdia Sherry <fs436@cam.ac.uk>"]
license = "GPLv3"

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
torchvision = "^0.12.0"
matplotlib = "^3.5.2"
ipykernel = "^6.15.0"
pytest = "^7.1.2"
protobuf = "^3.9.2"
tqdm = "^4.64.0"
wandb = "^0.13.4"
kornia = "^0.6.8"
foolbox = "^3.3.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.961"
flake8 = "^4.0.1"
ipykernel = "^6.15.0"
plotille = "^4.0.2"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
tqdm = "^4.64.1"
six = "^1.16.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
