[project]
name = "nonexpansive-odes"
authors = [
    {name = "Ferdia Sherry", email = "ferdia@ferdiasherry.com"}
]
version = "0.1.0"
description = "A software package to accompany the paper ``Designing stable neural networks using convex analysis and ODEs'', Sherry et al., 2024, https://doi.org/10.1016/j.physd.2024.134159."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "foolbox>=3.3.4",
    "kornia>=0.7.4",
    "numpy<2",
    "torch<2.3.0",
    "torchvision>=0.17.2",
    "tqdm>=4.67.1",
    "wandb>=0.19.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
